Added initial fixed source manager

--- a/src/solvers/CMakeLists.txt
+++ b/src/solvers/CMakeLists.txt
@@ -25,6 +25,7 @@ SET(SRC
     PowerIteration.cc
     PreconditionerWG.cc
     PreconditionerMG.cc
+    FixedSourceManager.cc
 )
 
 #-----------------------------------------------------------------------------#
