Updated a lot of quadrature stuff

--- a/src/angle/CMakeLists.txt
+++ b/src/angle/CMakeLists.txt
@@ -28,6 +28,7 @@ SET(SRC
     UniformEqual.cc
     ProductQuadrature.cc
     ChebyshevLegendre.cc
+    ChebyshevDPN.cc
 )
 
 #-----------------------------------------------------------------------------#
