Updates for multiplying fixed source

--- a/src/solvers/test/CMakeLists.txt
+++ b/src/solvers/test/CMakeLists.txt
@@ -24,6 +24,9 @@ TARGET_LINK_LIBRARIES(test_DiffusionFixedSourceSolver   solvers)
 ADD_EXECUTABLE(test_DiffusionEigensolver          test_DiffusionEigensolver.cc)
 TARGET_LINK_LIBRARIES(test_DiffusionEigensolver   solvers)
 
+ADD_EXECUTABLE(test_FixedSourceManager          test_FixedSourceManager.cc)
+TARGET_LINK_LIBRARIES(test_FixedSourceManager   solvers)
+
 #------------------------------------------------------------------------------#
 # Define tests
 #------------------------------------------------------------------------------#
@@ -32,6 +35,7 @@ TARGET_LINK_LIBRARIES(test_DiffusionEigensolver   solvers)
 ADD_TEST(test_SourceIteration_2D  test_SourceIteration 0)
 #ADD_TEST(test_SourceIteration_3D  test_SourceIteration 3)
 ADD_TEST(test_PowerIteration_2D test_PowerIteration 0)
+ADD_TEST(test_FixedSourceManager_1D        test_FixedSourceManager 0)
 
 if (DETRAN_ENABLE_PETSC)
 
