Fixed right preconditioner in GMRES

--- a/src/callow/test/CMakeLists.txt
+++ b/src/callow/test/CMakeLists.txt
@@ -23,8 +23,9 @@ ADD_EXECUTABLE(test_LinearSolver        test_LinearSolver.cc)
 TARGET_LINK_LIBRARIES(test_LinearSolver callow )
 ADD_TEST(test_Richardson                test_LinearSolver 0)
 ADD_TEST(test_Jacobi                    test_LinearSolver 1)
-ADD_TEST(test_GaussSeidell              test_LinearSolver 2)
-ADD_TEST(test_GMRES                     test_LinearSolver 3)
+ADD_TEST(test_GaussSeidel               test_LinearSolver 2)
+ADD_TEST(test_SOR                       test_LinearSolver 3)
+ADD_TEST(test_GMRES                     test_LinearSolver 4)
 
 # Eigenvalue Solvers
 ADD_EXECUTABLE(test_EigenSolver         test_EigenSolver.cc)
