--- a/src/config/detran_config.hh.in
+++ b/src/config/detran_config.hh.in
@@ -24,6 +24,9 @@
 #cmakedefine DETRAN_ENABLE_HDF5
 #cmakedefine DETRAN_ENABLE_BOOST
 
+// Date of Compilation
+#cmakedefine DETRAN_COMPILED_DATE
+
 #endif // DETRAN_CONFIG_HH 
 
 //---------------------------------------------------------------------------//
