--- a/src/solvers/CMakeLists.txt
+++ b/src/solvers/CMakeLists.txt
@@ -12,23 +12,23 @@ SET(SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 
 SET(SRC
     Solver.cc
-    DiffusionFixedSourceSolver.cc
-    DiffusionEigensolver.cc
-    DiffusionGainOperator.cc
-    DiffusionLossOperator.cc
-    Eigensolver.cc
-	  EigenSLEPc.cc
     WGSolver.cc
     WGSolverSI.cc
     MGSolver.cc
     MGTransportSolver.cc
     MGSolverGS.cc
     MGSolverGMRES.cc
-    PowerIteration.cc
+    Eigensolver.cc
+    EigenSLEPc.cc
+    EigenPI.cc
     PreconditionerWG.cc
     PreconditionerMG.cc
     FixedSourceManager.cc
     EigenvalueManager.cc
+    DiffusionFixedSourceSolver.cc
+    DiffusionEigensolver.cc
+    DiffusionGainOperator.cc
+    DiffusionLossOperator.cc
 )
 
 #-----------------------------------------------------------------------------#
