--- a/src/solvers/test/CMakeLists.txt
+++ b/src/solvers/test/CMakeLists.txt
@@ -18,11 +18,11 @@ message( "++ Adding detran solvers tests." )
 #ADD_EXECUTABLE(test_InnerGMRES                 test_InnerGMRES.cc)
 #TARGET_LINK_LIBRARIES(test_InnerGMRES          solvers)
 
-ADD_EXECUTABLE(test_DiffusionFixedSourceSolver          test_DiffusionFixedSourceSolver.cc)
-TARGET_LINK_LIBRARIES(test_DiffusionFixedSourceSolver   solvers)
+#ADD_EXECUTABLE(test_DiffusionFixedSourceSolver          test_DiffusionFixedSourceSolver.cc)
+#TARGET_LINK_LIBRARIES(test_DiffusionFixedSourceSolver   solvers)
 
-ADD_EXECUTABLE(test_DiffusionEigensolver          test_DiffusionEigensolver.cc)
-TARGET_LINK_LIBRARIES(test_DiffusionEigensolver   solvers)
+#ADD_EXECUTABLE(test_DiffusionEigensolver          test_DiffusionEigensolver.cc)
+#TARGET_LINK_LIBRARIES(test_DiffusionEigensolver   solvers)
 
 ADD_EXECUTABLE(test_FixedSourceManager          test_FixedSourceManager.cc)
 TARGET_LINK_LIBRARIES(test_FixedSourceManager   solvers)
@@ -45,9 +45,9 @@ ADD_TEST(test_EigenvalueManager_1D         test_EigenvalueManager 0)
 if (DETRAN_ENABLE_PETSC)
 
 #ADD_TEST(test_InnerGMRES_1D 		test_InnerGMRES 0)
-ADD_TEST(test_DiffusionFixedSourceSolver_1D  test_DiffusionFixedSourceSolver 0)
-ADD_TEST(test_DiffusionFixedSourceSolver_2D  test_DiffusionFixedSourceSolver 1)
-ADD_TEST(test_DiffusionFixedSourceSolver_3D  test_DiffusionFixedSourceSolver 2)
-ADD_TEST(test_DiffusionEigenSolver_1D        test_DiffusionEigensolver 0)
+#ADD_TEST(test_DiffusionFixedSourceSolver_1D  test_DiffusionFixedSourceSolver 0)
+#ADD_TEST(test_DiffusionFixedSourceSolver_2D  test_DiffusionFixedSourceSolver 1)
+#ADD_TEST(test_DiffusionFixedSourceSolver_3D  test_DiffusionFixedSourceSolver 2)
+#ADD_TEST(test_DiffusionEigenSolver_1D        test_DiffusionEigensolver 0)
 
 endif ()
