More callow integration.  New direct diffusion solver for eigenproblems.  Compares the full multigroup eigenproblem to the collapsed version in terms of only density

--- a/src/solvers/CMakeLists.txt
+++ b/src/solvers/CMakeLists.txt
@@ -22,6 +22,7 @@ SET(SRC
     Eigensolver.cc
     EigenSLEPc.cc
     EigenPI.cc
+    EigenDiffusion.cc
     PreconditionerWG.cc
     PreconditionerMG.cc
     FixedSourceManager.cc
