Initial callow integration for wg solver

--- a/src/solvers/CMakeLists.txt
+++ b/src/solvers/CMakeLists.txt
@@ -16,6 +16,7 @@ SET(SRC
     WGSolver.cc
     WGSolverSI.cc
     WGSolverGMRES.cc
+    WGTransportOperator.cc
     #
     MGSolver.cc
     MGTransportSolver.cc
