Added mg to source

--- a/src/solvers/CMakeLists.txt
+++ b/src/solvers/CMakeLists.txt
@@ -23,6 +23,7 @@ SET(SRC
     MGSolverGS.cc
     MGSolverGMRES.cc
     MGDiffusionSolver.cc
+    MGTransportOperator.cc
     #
     Eigensolver.cc
     EigenSLEPc.cc
