--- a/src/solvers/CMakeLists.txt
+++ b/src/solvers/CMakeLists.txt
@@ -38,6 +38,8 @@ SET(SRC
     #
     DiffusionGainOperator.cc
     DiffusionLossOperator.cc
+    #
+    SweepOperator.cc
 )
 
 #-----------------------------------------------------------------------------#
