--- a/src/discretization/CMakeLists.txt
+++ b/src/discretization/CMakeLists.txt
@@ -14,6 +14,7 @@ SET(SRC
     Equation_DD_1D.cc
     Equation_DD_2D.cc
     Equation_DD_3D.cc
+    Equation_SC_1D.cc
     Equation_SC_2D.cc
     Equation_SD_1D.cc
     Equation_SD_2D.cc
