Fixed bug in product quadrature.  Ensured consistency of GMRES for MG eigen.  Lots of sanitizing. (Really added the changes this time)

--- a/src/solvers/CMakeLists.txt
+++ b/src/solvers/CMakeLists.txt
@@ -58,7 +58,7 @@ TARGET_LINK_LIBRARIES(${LIB_NAME}
                       material
                       geometry
                       utilities
-                      ${Callow_LIBRARIES}
+                      ioutils
 )
 
 INSTALL_FILES(/include/${LIB_NAME} .hh)
