Added new operator for eigenvalue problems.  Coupled transport eigensolve to callow

--- a/src/solvers/CMakeLists.txt
+++ b/src/solvers/CMakeLists.txt
@@ -26,9 +26,10 @@ SET(SRC
     MGTransportOperator.cc
     #
     Eigensolver.cc
-    EigenSLEPc.cc
+    EigenArnoldi.cc
     EigenPI.cc
     EigenDiffusion.cc
+    EnergyIndependentEigenOperator.cc
     #
     PreconditionerWG.cc
     PreconditionerMG.cc
