WGDSA tested; MGDSA has obvious bug

--- a/src/diffusion/CMakeLists.txt
+++ b/src/diffusion/CMakeLists.txt
@@ -12,7 +12,7 @@ SET(SRC
     BaseOperator.cc
     GainOperator.cc
     LossOperator.cc
-    OneGroupLossOperator.cc
+#   OneGroupLossOperator.cc
 )
 
 #-------------------------------------#
