--- a/src/solvers/CMakeLists.txt
+++ b/src/solvers/CMakeLists.txt
@@ -2,45 +2,27 @@
 # src/solvers/CMakeLists.txt
 #------------------------------------------------------------------------------#
 
-SET(LIB_NAME "solvers")
+set(LIB_NAME "solvers")
 
-SET(SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
+set(SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 
 #-----------------------------------------------------------------------------#
 # SOURCE
 #-----------------------------------------------------------------------------#
 
-SET(SRC
-    Solver.cc
-    #
-    WGSolver.cc
-    WGSolverSI.cc
-    WGSolverGMRES.cc
-    WGTransportOperator.cc
-    #
-    MGSolver.cc
-    MGTransportSolver.cc
-    MGSolverGS.cc
-    MGSolverGMRES.cc
-    MGDiffusionSolver.cc
-    MGTransportOperator.cc
-    #
-    Eigensolver.cc
-    EigenArnoldi.cc
-    EigenPI.cc
-    EigenDiffusion.cc
-    EnergyIndependentEigenOperator.cc
-    #
-    PreconditionerWG.cc
-    PreconditionerMG.cc
-    #
+# Include
+include_directories(${SRC_DIR})
+include_directories(wg)
+include_directories(mg)
+include_directories(eigen)
+add_subdirectory(wg)
+add_subdirectory(mg)
+add_subdirectory(eigen)
+set(SRC
     FixedSourceManager.cc
     EigenvalueManager.cc
-    #
-    DiffusionGainOperator.cc
-    DiffusionLossOperator.cc
-    #
     SweepOperator.cc
+    Solver.cc
 )
 
 #-----------------------------------------------------------------------------#
@@ -50,6 +32,9 @@ SET(SRC
 ADD_LIBRARY(${LIB_NAME}
             SHARED
             ${SRC} 
+            ${WG_SRC}
+            ${MG_SRC}
+            ${EIGEN_SRC}
 )
 TARGET_LINK_LIBRARIES(${LIB_NAME}
                       callow
