Changes in support of time dependence

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -248,6 +248,7 @@ include_directories(external_source)
 include_directories(discretization)
 include_directories(boundary)
 include_directories(transport)
+include_directories(kinetics)
 # level 3
 include_directories(diffusion)
 # level 4
@@ -278,6 +279,7 @@ add_subdirectory(external_source)
 add_subdirectory(discretization)
 add_subdirectory(boundary)
 add_subdirectory(transport)
+add_subdirectory(kinetics)
 add_subdirectory(diffusion)
 add_subdirectory(solvers)
 add_subdirectory(ioutils)
