Added linearly interpolated and pulsed time dependent sources

--- a/src/kinetics/CMakeLists.txt
+++ b/src/kinetics/CMakeLists.txt
@@ -18,6 +18,8 @@ SET(SRC
     SyntheticSource.cc
     SyntheticMomentSource.cc
     SyntheticDiscreteSource.cc
+    LinearExternalSource.cc
+    PulsedExternalSource.cc
 )
 
 #-----------------------------------------------------------------------------#
