Added 1D discretization tests and fixed 1D SC bug

--- a/src/discretization/test/CMakeLists.txt
+++ b/src/discretization/test/CMakeLists.txt
@@ -8,8 +8,10 @@ message( "++ Adding detran discretization tests." )
 # Create test executables
 #------------------------------------------------------------------------------#
 
-#ADD_EXECUTABLE(test_BoundarySN                  test_BoundarySN.cc)
-#TARGET_LINK_LIBRARIES(test_BoundarySN           boundary)
+ADD_EXECUTABLE(test_Equation_DD_1D              test_Equation_DD_1D.cc)
+TARGET_LINK_LIBRARIES(test_Equation_DD_1D       discretization)
+ADD_EXECUTABLE(test_Equation_SC_1D              test_Equation_SC_1D.cc)
+TARGET_LINK_LIBRARIES(test_Equation_SC_1D       discretization)
 
 #ADD_EXECUTABLE(test_BoundaryMOC                 test_BoundaryMOC.cc)
 #TARGET_LINK_LIBRARIES(test_BoundaryMOC          boundary)
@@ -21,6 +23,7 @@ message( "++ Adding detran discretization tests." )
 ## Define tests
 ##------------------------------------------------------------------------------#
 
-#ADD_TEST(test_BoundarySN            test_BoundarySN         0)
+ADD_TEST(test_Equation_DD_1D          test_Equation_DD_1D         0)
+ADD_TEST(test_Equation_SC_1D          test_Equation_SC_1D         0)
 #ADD_TEST(test_BoundaryMOC           test_BoundaryMOC        0)
 #ADD_TEST(test_BoundaryDiffusion     test_BoundaryDiffusion  0)
