--- a/src/kinetics/CMakeLists.txt
+++ b/src/kinetics/CMakeLists.txt
@@ -21,6 +21,7 @@ SET(SRC
     SyntheticDiscreteSource.cc
     LinearExternalSource.cc
     PulsedExternalSource.cc
+    LRA.cc
 )
 
 #-----------------------------------------------------------------------------#
