SWIG overhaul and slight restructuring

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -244,7 +244,7 @@ include_directories(material)
 include_directories(callow)
 include_directories(external_source)
 # level 2
-include_directories(discretization)
+#include_directories(discretization)
 include_directories(boundary)
 include_directories(transport)
 include_directories(kinetics)
@@ -273,18 +273,17 @@ add_subdirectory(material)
 add_subdirectory(angle)
 add_subdirectory(geometry)
 add_subdirectory(external_source)
-add_subdirectory(discretization)
 add_subdirectory(boundary)
 add_subdirectory(transport)
+add_subdirectory(ioutils)
 add_subdirectory(kinetics)
 add_subdirectory(solvers)
-add_subdirectory(ioutils)
 add_subdirectory(postprocess)
-add_subdirectory(drivers)
+#add_subdirectory(drivers)
 
 # Python things for installation
 if( DETRAN_ENABLE_PYTHON )
-  add_subdirectory(python)
+#  add_subdirectory(python)
 endif()
 
 #------------------------------------------------------------------------------#
