--- a/src/transport/CMakeLists.txt
+++ b/src/transport/CMakeLists.txt
@@ -22,6 +22,15 @@ SET(SRC
     Sweeper2D.cc
     Sweeper3D.cc
     Sweeper2DMOC.cc
+    # discretization
+    Equation_DD_1D.cc
+    Equation_DD_2D.cc
+    Equation_DD_3D.cc
+    Equation_SC_1D.cc
+    Equation_SC_2D.cc
+    Equation_SD_1D.cc
+    Equation_SD_2D.cc
+    Equation_SC_MOC.cc
 )
 
 #-----------------------------------------------------------------------------#
@@ -35,7 +44,6 @@ ADD_LIBRARY(${LIB_NAME}
 TARGET_LINK_LIBRARIES(${LIB_NAME}
                       angle
                       boundary
-                      discretization
                       external_source
                       geometry
                       material
@@ -53,3 +61,25 @@ if( DETRAN_ENABLE_TEST )
     include_directories(${SRC_DIR}/test)
     add_subdirectory(${SRC_DIR}/test)
 endif()
+
+#-----------------------------------------------------------------------------#
+# PYTHON
+#-----------------------------------------------------------------------------#
+
+if(DETRAN_ENABLE_PYTHON)
+
+SET_SOURCE_FILES_PROPERTIES(detran_${LIB_NAME}.i PROPERTIES CPLUSPLUS ON)
+SWIG_ADD_MODULE(${LIB_NAME} python detran_${LIB_NAME}.i )
+SWIG_LINK_LIBRARIES(${LIB_NAME}
+                    ${PYTHON_LIBRARIES}
+                    ${LIB_NAME} 
+                    utilities
+                    )
+
+# Install the module and library
+INSTALL(FILES ${CMAKE_BINARY_DIR}/${LIB_NAME}/${LIB_NAME}.py
+        DESTINATION ${CMAKE_INSTALL_PREFIX}/python/detran)
+INSTALL(FILES ${CMAKE_BINARY_DIR}/${LIB_NAME}/_${LIB_NAME}.so
+        DESTINATION ${CMAKE_INSTALL_PREFIX}/python/detran)
+        
+endif()        
