--- a/src/boundary/CMakeLists.txt
+++ b/src/boundary/CMakeLists.txt
@@ -41,3 +41,27 @@ if( DETRAN_ENABLE_TEST )
     include_directories(${SRC_DIR}/test)
     add_subdirectory(${SRC_DIR}/test)
 endif()
+
+#-----------------------------------------------------------------------------#
+# PYTHON
+#-----------------------------------------------------------------------------#
+
+if(DETRAN_ENABLE_PYTHON)
+
+SET_SOURCE_FILES_PROPERTIES(detran_${LIB_NAME}.i PROPERTIES CPLUSPLUS ON)
+SWIG_ADD_MODULE(${LIB_NAME} python detran_${LIB_NAME}.i )
+SWIG_LINK_LIBRARIES(${LIB_NAME}
+                    ${PYTHON_LIBRARIES}
+                    ${LIB_NAME} 
+                    utilities
+                    geometry
+                    angle
+                    )
+
+# Install the module and library
+INSTALL(FILES ${CMAKE_BINARY_DIR}/${LIB_NAME}/${LIB_NAME}.py
+        DESTINATION ${CMAKE_INSTALL_PREFIX}/python/detran)
+INSTALL(FILES ${CMAKE_BINARY_DIR}/${LIB_NAME}/_${LIB_NAME}.so
+        DESTINATION ${CMAKE_INSTALL_PREFIX}/python/detran)
+        
+endif()      
