--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,66 +19,47 @@ if(NOT CMAKE_BUILD_TYPE)
 endif()
 
 # Options for Python bindings. On or Off.
-SET(DETRAN_ENABLE_PYTHON NO CACHE BOOL
-    "Enable Python bindings via SWIG."
-)
-
+SET(DETRAN_ENABLE_PYTHON NO CACHE BOOL      "Enable Python bindings via SWIG.")
 # Options for OpenMP directives. On or Off.
-SET(DETRAN_ENABLE_OPENMP NO CACHE BOOL
-    "Enable OpenMP for multithreaded solves."
-)
-
+SET(DETRAN_ENABLE_OPENMP NO CACHE BOOL      "Enable OpenMP for multithreaded solves.")
 # Options for PETSc. On or Off.
-SET(DETRAN_ENABLE_PETSC NO CACHE BOOL
-    "Build callow with PETSc ."
-)
-
+SET(DETRAN_ENABLE_PETSC NO CACHE BOOL       "Build callow with PETSc .")
 # Options for SLEPc. On or Off.
-SET(DETRAN_ENABLE_SLEPC NO CACHE BOOL
-    "Build callow SLEPc."
-)
-
+SET(DETRAN_ENABLE_SLEPC NO CACHE BOOL       "Build callow SLEPc.")
 # Options for gperftools. On or Off.
-SET(DETRAN_ENABLE_GPERFTOOLS NO CACHE BOOL
-    "Enable Google Performance Tools for profiling."
-)
-
+SET(DETRAN_ENABLE_GPERFTOOLS NO CACHE BOOL  "Enable Google Performance Tools for profiling.")
 # Options for silo. On or Off.
-SET( DETRAN_ENABLE_SILO NO CACHE BOOL
-  "Enable SILO."
-)
-
+SET( DETRAN_ENABLE_SILO NO CACHE BOOL       "Enable SILO.")
 # Options for HDF5. On or Off.
-SET( DETRAN_ENABLE_HDF5 NO CACHE BOOL
-  "Enable HDF5."
-)
-
+SET( DETRAN_ENABLE_HDF5 NO CACHE BOOL       "Enable HDF5.")
 # Options for Boost. On or Off.
-SET( DETRAN_ENABLE_BOOST NO CACHE BOOL
-  "Enable BOOST."
-)
+SET( DETRAN_ENABLE_BOOST NO CACHE BOOL      "Enable BOOST.")
 
 SET(DETRAN_COMPILED_DATE 7 CACHE INTEGER
   "Date of compilation."
 )
 
-#macro(today result)
-#  if(WIN32)
-#    execute_process(COMMAND "cmd" " /C date /T" OUTPUT_VARIABLE ${result})
-#    string(REGEX REPLACE "(..)/(..)/..(..).*" "\\1/\\2/\\3" ${result} ${${result}})
-#  elseif(UNIX)
-#    execute_process(COMMAND "date" "+%m/%d/%Y" OUTPUT_VARIABLE ${result})
-#    string(REGEX REPLACE "(..)/(..)/..(..).*" "\\1/\\2/\\3" ${result} ${${result}})
-#  else (WIN32)
-#    message("date not implemented")
-#    set(${result} 000000)
-#  endif (WIN32)
-#endmacro(today)
-#today(TODAY)
+macro(month RESULT)
+  execute_process(COMMAND "date" "+%d/%m/%Y" OUTPUT_VARIABLE ${RESULT})
+  string(REGEX REPLACE "(..)/(..)/(....)." "\\1" ${RESULT} ${${RESULT}})
+endmacro(month)
 
-#set(DETRAN_COMPILED_DATE ${TODAY})
-#message(STATUS "Compilation date = ${DETRAN_COMPILED_DATE}")
+macro(day RESULT)
+  execute_process(COMMAND "date" "+%d/%m/%Y" OUTPUT_VARIABLE ${RESULT})
+  string(REGEX REPLACE "(..)/(..)/(....)." "\\2" ${RESULT} ${${RESULT}})
+endmacro(day)
 
+macro(year RESULT)
+  execute_process(COMMAND "date" "+%d/%m/%Y" OUTPUT_VARIABLE ${RESULT})
+  string(REGEX REPLACE "(..)/(..)/(....)." "\\3" ${RESULT} ${${RESULT}})
+endmacro(year)
+
+month(MONTH)
+day(DAY)
+year(YEAR)
+set(DETRAN_COMPILED_M ${MONTH})
+set(DETRAN_COMPILED_D ${DAY})
+set(DETRAN_COMPILED_Y ${YEAR})
 
 # Write config file, install it, and include that directory for all source
 set(DETRAN_CONFIG_IN  "${CMAKE_CURRENT_SOURCE_DIR}/config/detran_config.hh.in")
@@ -95,48 +76,48 @@ install(FILES ${PROJECT_BINARY_DIR}/config/detran_config.hh
 # EXTERNAL LIBRARIES
 #------------------------------------------------------------------------------#
 
-IF( DETRAN_ENABLE_PYTHON )
+if(DETRAN_ENABLE_PYTHON)
   find_package(SWIG REQUIRED)
   INCLUDE(${SWIG_USE_FILE})
   find_package(PythonLibs REQUIRED)
   include_directories(${PYTHON_INCLUDE_PATH})
   include_directories(${PROJECT_BINARY_DIR}/config)
   set(CMAKE_SWIG_FLAGS "-v")
-ENDIF()
+endif()
 
-IF( DETRAN_ENABLE_OPENMP )
+if(DETRAN_ENABLE_OPENMP)
   find_package(OpenMP REQUIRED)
   set(CMAKE_CXX_FLAGS ${OpenMP_CXX_FLAGS})
-ENDIF()
+endif()
 
-if( DETRAN_ENABLE_PETSC)
+if(DETRAN_ENABLE_PETSC)
   find_package(PETSc REQUIRED)
   include_directories(${PETSC_INCLUDES})
   add_definitions(${PETSC_DEFINITIONS})
 endif()
 
-if( DETRAN_ENABLE_SLEPC)
+if(DETRAN_ENABLE_SLEPC)
   find_package(SLEPc REQUIRED)
   include_directories(${SLEPC_INCLUDES})
 endif()
 
-if( DETRAN_ENABLE_SILO)
+if(DETRAN_ENABLE_SILO)
   find_package(Silo)
   if(Silo_FOUND)
     include_directories(${Silo_INCLUDE_DIR})
   else()
       set( DETRAN_ENABLE_SILO OFF )
-      MESSAGE( STATUS "Disabling Silo since it was not found." )
+      message( STATUS "Disabling Silo since it was not found." )
   endif()
 endif()
 
-if( DETRAN_ENABLE_HDF5)
+if(DETRAN_ENABLE_HDF5)
   find_package(HDF5)
   if(HDF5_FOUND)
     include_directories(${HDF5_INCLUDE_DIR})
   else()
       set( DETRAN_ENABLE_HDF5 OFF )
-      MESSAGE( STATUS "Disabling HDF5 since it was not found." )
+      message( STATUS "Disabling HDF5 since it was not found." )
       # Need to reset them, since FindHDF5 fills them with "not founds", 
       # which leads to errors downstream.
       set(HDF5_LIBRARIES "")
@@ -145,13 +126,13 @@ if( DETRAN_ENABLE_HDF5)
 endif()
 
 # This is a hack for now.  Probably worth generating a CMake finder thing.
-IF( DETRAN_ENABLE_GPERFTOOLS )
+if(DETRAN_ENABLE_GPERFTOOLS)
   set(GPERFTOOLS_LIBRARIES "/home/robertsj/opt/gperftools/lib/libprofiler.so")
   set(GPERFTOOLS_INCLUDE   "/home/robertsj/opt/gperftools/include")
   include_directories(${GPERFTOOLS_INCLUDE})
-ENDIF()
+endif()
 
-if( DETRAN_ENABLE_BOOST)
+if(DETRAN_ENABLE_BOOST)
   set(Boost_USE_STATIC_LIBS OFF)
   set(Boost_USE_MULTITHREAD OFF)
   set(Boost_ADDITIONAL_VERSIONS "1.50" "1.50.0")
@@ -160,7 +141,7 @@ if( DETRAN_ENABLE_BOOST)
     include_directories(${Boost_INCLUDE_DIRS})
   else(Boost_FOUND)
     set( DETRAN_ENABLE_BOOST OFF )
-    MESSAGE( STATUS "Disabling BOOST since it was not found." )
+    message( STATUS "Disabling BOOST since it was not found." )
     # Need to reset them, since FindHDF5 fills them with "not founds", 
     # which leads to errors downstream.
     set(Boost_LIBRARIES "")
@@ -175,39 +156,14 @@ endif()
 
 OPTION ( USE_TESTING "Build testing" ON )
 if ( DETRAN_ENABLE_TEST )
-#    SET ( CTEST_INITIAL_CACHE "
-#      COVERAGE_COMMAND:FILEPATH=/usr/bin/gcov
-#    " )
-#    # need for coverage -- probably a cleaner way to set this up.
-#    SET( CMAKE_CXX_FLAGS_DEBUG        
-#         "-g -O0  -fprofile-arcs -ftest-coverage" CACHE STRING 
-#         "Choose"
-#         FORCE
-#    )
-#    SET( CMAKE_CXX_FLAGS        
-#         "-g -O0  -fprofile-arcs -ftest-coverage" CACHE STRING
-#         "Choose"
-#         FORCE
-#    )
-#    SET( CMAKE_C_FLAGS_DEBUG          
-#         "-g -O0  -fprofile-arcs -ftest-coverage" CACHE STRING
-#         "Choose"
-#         FORCE
-#    )
-#    SET( CMAKE_EXE_LINKER_FLAGS 
-#         "-g -O0  -fprofile-arcs -ftest-coverage" CACHE STRING
-#         "Choose"
-#         FORCE
-#    )
-#    SET( CTEST_MEMORYCHECK_COMMAND 
-#       /usr/bin/valgrind CACHE STRING 
-#       "Set the memory checking command."
-#       FORCE
-#    )
-#    SET( CTEST_MEMORYCHECK_COMMAND_OPTIONS 
-#       "--tool=memcheck --leak-check=full" CACHE STRING 
-#       "Set the memory checking command options."
-#       FORCE
+    SET (CTEST_INITIAL_CACHE "COVERAGE_COMMAND:FILEPATH=/usr/bin/gcov")
+    # need for coverage -- probably a cleaner way to set this up.
+#    SET( CMAKE_CXX_FLAGS_DEBUG  "-g -O0  -fprofile-arcs -ftest-coverage" CACHE STRING "Choose" FORCE)
+#    SET( CMAKE_CXX_FLAGS        "-g -O0  -fprofile-arcs -ftest-coverage" CACHE STRING "Choose" FORCE)
+#    SET( CMAKE_EXE_LINKER_FLAGS "-g -O0  -fprofile-arcs -ftest-coverage" CACHE STRING "Choose" FORCE)
+#    SET( CTEST_MEMORYCHECK_COMMAND /usr/bin/valgrind CACHE STRING "Set the memory checking command." FORCE)
+#    SET( CTEST_MEMORYCHECK_COMMAND_OPTIONS "--tool=memcheck --leak-check=full" CACHE STRING 
+#       "Set the memory checking command options." FORCE
 #    ) 
     ENABLE_TESTING()
     INCLUDE(CTest)
@@ -279,7 +235,7 @@ add_subdirectory(ioutils)
 add_subdirectory(kinetics)
 add_subdirectory(solvers)
 add_subdirectory(postprocess)
-#add_subdirectory(drivers)
+add_subdirectory(drivers)
 
 # Python things for installation
 if( DETRAN_ENABLE_PYTHON )
@@ -293,43 +249,44 @@ endif()
 message("---------------------------------------------------------------------")
 message("              SUMMARY OF CMAKE CONFIGURATION")
 message("---------------------------------------------------------------------")
+message("++++ Date:        ${DETRAN_COMPILED_M}|${DETRAN_COMPILED_D}|${DETRAN_COMPILED_Y}")
 message("++++ System:      ${CMAKE_SYSTEM} ${CMAKE_SYSTEM_PROCESSOR}")
 message("++++ CXX:         ${CMAKE_CXX_COMPILER}")
 message("++++ Build type:  ${CMAKE_BUILD_TYPE}")
 message("++++ Install:     ${CMAKE_INSTALL_PREFIX}")
 
 message("---------------------------------------------------------------------")
-if( DETRAN_ENABLE_PYTHON )
+if(DETRAN_ENABLE_PYTHON)
 message("++++ Python:      enabled")
 else()
 message("++++ Python:      disabled")
 endif()
-if( DETRAN_ENABLE_OPENMP )
+if(DETRAN_ENABLE_OPENMP)
 message("++++ OpenMP:      enabled")
 else()
 message("++++ OpenMP:      disabled")
 endif()
-if( DETRAN_ENABLE_PETSC )
+if(DETRAN_ENABLE_PETSC)
 message("++++ PETSc:       enabled")
 else()
 message("++++ PETSc:       disabled")
 endif()
-if( DETRAN_ENABLE_SLEPC )
+if(DETRAN_ENABLE_SLEPC)
 message("++++ SLEPc:       enabled")
 else()
 message("++++ SLEPc:       disabled")
 endif()
-if( DETRAN_ENABLE_GPERFTOOLS )
+if(DETRAN_ENABLE_GPERFTOOLS)
 message("++++ Profiling:   enabled")
 else()
 message("++++ Profiling:   disabled")
 endif()
-if( DETRAN_ENABLE_SILO )
+if(DETRAN_ENABLE_SILO)
 message("++++ Silo:        enabled")
 else()
 message("++++ Silo:        disabled")
 endif()
-if( DETRAN_ENABLE_HDF5 )
+if(DETRAN_ENABLE_HDF5)
 message("++++ HDF5:        enabled")
 else()
 message("++++ HDF5:        disabled")
@@ -339,7 +296,7 @@ message("++++ BOOST:       enabled")
 else()
 message("++++ BOOST:       disabled")
 endif()
-if( DETRAN_ENABLE_TEST )
+if(DETRAN_ENABLE_TEST)
 message("++++ Testing:     enabled")
 else()
 message("++++ Testing:     disabled")
