Slight changes in callow for older compiler.  Updated HDF5 finder so that user specified path takes precedence.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -115,6 +115,7 @@ if(DETRAN_ENABLE_HDF5)
   find_package(HDF5)
   if(HDF5_FOUND)
     include_directories(${HDF5_INCLUDE_DIR})
+    message("HDF5_INCLUDE_DIR = ${HDF5_INCLUDE_DIR}")
   else()
       set( DETRAN_ENABLE_HDF5 OFF )
       message( STATUS "Disabling HDF5 since it was not found." )
