Added indexer for spherical harmonics

--- a/src/angle/CMakeLists.txt
+++ b/src/angle/CMakeLists.txt
@@ -29,6 +29,7 @@ SET(SRC
     ProductQuadrature.cc
     ChebyshevLegendre.cc
     ChebyshevDPN.cc
+    MomentIndexer.cc
 )
 
 #-----------------------------------------------------------------------------#
