--- a/src/utilities/CMakeLists.txt
+++ b/src/utilities/CMakeLists.txt
@@ -18,6 +18,7 @@ SET(SRC
 #-----------------------------------------------------------------------------#
 # SHARED LIBRARY
 #-----------------------------------------------------------------------------#
+message("GPERF  = ${GPERFTOOLS_LIBRARIES}")
 
 ADD_LIBRARY(${LIB_NAME}
             SHARED
