--- a/src/kinetics/test/CMakeLists.txt
+++ b/src/kinetics/test/CMakeLists.txt
@@ -18,6 +18,9 @@ TARGET_LINK_LIBRARIES(test_LinearExternalSource      kinetics)
 ADD_EXECUTABLE(test_PulsedExternalSource             test_PulsedExternalSource.cc)
 TARGET_LINK_LIBRARIES(test_PulsedExternalSource      kinetics)
 
+ADD_EXECUTABLE(test_MultiPhysics             		test_MultiPhysics.cc)
+TARGET_LINK_LIBRARIES(test_MultiPhysics             kinetics)
+
 
 #------------------------------------------------------------------------------#
 # Define tests
@@ -28,4 +31,6 @@ ADD_TEST(test_LinearMaterial         test_LinearMaterial 0)
 
 ADD_TEST(test_LinearExternalSource   test_LinearExternalSource 0)
 ADD_TEST(test_PulsedExternalSource   test_PulsedExternalSource 0)
+
+ADD_TEST(test_MultiPhysics           test_MultiPhysics 0)
 
