--- a/src/solvers/test/CMakeLists.txt
+++ b/src/solvers/test/CMakeLists.txt
@@ -33,9 +33,10 @@ TARGET_LINK_LIBRARIES(test_EigenvalueManager    solvers)
 ADD_EXECUTABLE(test_TimeStepper           		test_TimeStepper.cc)
 TARGET_LINK_LIBRARIES(test_TimeStepper    		solvers)
 
-ADD_EXECUTABLE(test_TWIGL                      test_TWIGL.cc)
-TARGET_LINK_LIBRARIES(test_TWIGL              solvers)
-
+ADD_EXECUTABLE(test_TWIGL                      	test_TWIGL.cc)
+TARGET_LINK_LIBRARIES(test_TWIGL              	solvers)
+ADD_EXECUTABLE(test_LRA                      	test_LRA.cc)
+TARGET_LINK_LIBRARIES(test_LRA              	solvers)
 #------------------------------------------------------------------------------#
 # Define tests
 #------------------------------------------------------------------------------#
