--- a/src/callow/matrix/CMakeLists.txt
+++ b/src/callow/matrix/CMakeLists.txt
@@ -3,6 +3,7 @@ SET(SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 SET(MATRIX_SRC
   ${SRC_DIR}/Matrix.cc
   ${SRC_DIR}/MatrixShell.cc
+  ${SRC_DIR}/MatrixDense.cc
   PARENT_SCOPE
 )
 
