Added lots of orthogonal basis stuff

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -202,6 +202,7 @@ include_directories(geometry)
 include_directories(material)
 include_directories(callow)
 include_directories(external_source)
+include_directories(orthog)
 # level 2
 #include_directories(discretization)
 include_directories(boundary)
@@ -232,6 +233,7 @@ add_subdirectory(material)
 add_subdirectory(angle)
 add_subdirectory(geometry)
 add_subdirectory(external_source)
+add_subdirectory(orthog)
 add_subdirectory(boundary)
 add_subdirectory(transport)
 add_subdirectory(ioutils)
