--- a/src/orthog/test/CMakeLists.txt
+++ b/src/orthog/test/CMakeLists.txt
@@ -8,7 +8,32 @@ message( "++ Adding detran orthog tests." )
 # Create test executables
 #------------------------------------------------------------------------------#
 
+ADD_EXECUTABLE(test_CLP           test_CLP.cc)
+TARGET_LINK_LIBRARIES(test_CLP    orthog)
+
+ADD_EXECUTABLE(test_DLP           test_DLP.cc)
+TARGET_LINK_LIBRARIES(test_DLP    orthog)
+
+ADD_EXECUTABLE(test_DCT           test_DCT.cc)
+TARGET_LINK_LIBRARIES(test_DCT    orthog)
+
+ADD_EXECUTABLE(test_DCP           test_DCP.cc)
+TARGET_LINK_LIBRARIES(test_DCP    orthog)
+
+ADD_EXECUTABLE(test_BasisComparison           test_BasisComparison.cc)
+TARGET_LINK_LIBRARIES(test_BasisComparison    orthog)
+
 #------------------------------------------------------------------------------#
 # Define tests
 #------------------------------------------------------------------------------#
 
+ADD_TEST(test_CLP   test_CLP      0)
+
+ADD_TEST(test_DLP   test_DLP      0)
+
+ADD_TEST(test_DCT   test_DCT      0)
+
+ADD_TEST(test_DCP   test_DCP      0)
+
+ADD_TEST(test_BasisComparisonAnalytic        test_BasisComparison      0)
+ADD_TEST(test_BasisComparisonDiscontinuous   test_BasisComparison      1)
