--- a/src/solvers/test/CMakeLists.txt
+++ b/src/solvers/test/CMakeLists.txt
@@ -48,4 +48,4 @@ TARGET_LINK_LIBRARIES(test_LRA              	solvers)
 ADD_TEST(test_FixedSourceManager_1D        test_FixedSourceManager 0)
 ADD_TEST(test_EigenvalueManager_1D         test_EigenvalueManager 0)
 ADD_TEST(test_TimeStepper_BDF              test_TimeStepper 1)
-ADD_TEST(test_TWIGL              test_TWIGL 0)
+#ADD_TEST(test_TWIGL              test_TWIGL 0)
