Added jacobi as orthogonal option

--- a/src/orthog/CMakeLists.txt
+++ b/src/orthog/CMakeLists.txt
@@ -17,6 +17,7 @@ SET(SRC
   DLP.cc
   DCT.cc
   DCP.cc
+  Jacobi01.cc
 )
 
 #-----------------------------------------------------------------------------#
